Изменение версии Scala 3.0.0-RC1 -> 3.0.0-RC2
Версия Zio 1.0.3 -> 1.0.6, отказался от зависимостей scallop и monadic в виду отсутствия поддержки