@@ -1,17 +1,17 @@
 //Deps
 lazy val junit= "com.novocode" % "junit-interface" % "0.11" % "test"
 lazy val typesafe = "com.typesafe" % "config" % "1.4.0"
-lazy val scallop = "org.rogach" %% "scallop" % "3.5.1"
-lazy val zioVersion = "1.0.3"
+//lazy val scallop = "org.rogach" %% "scallop" % "3.5.1"
+lazy val zioVersion = "1.0.6"
 lazy val zioCore =  "dev.zio" %% "zio"               % zioVersion
 lazy val zioTest = "dev.zio" %% "zio-test"          % zioVersion % Test
 lazy val zioSbt = "dev.zio" %% "zio-test-sbt"      % zioVersion % Test
 lazy val zioJunit = "dev.zio" %% "zio-test-junit"    % zioVersion % Test
 lazy val zioMagnolia = "dev.zio" %% "zio-test-magnolia" % zioVersion % Test
-lazy val monadic = "com.olegpy" %% "better-monadic-for" % "0.3.1"
+//lazy val monadic = "com.olegpy" %% "better-monadic-for" % "0.3.1"
  
 ThisBuild / version      := "0.1.0"
-ThisBuild / scalaVersion := "3.0.0-RC1"
+ThisBuild / scalaVersion := "3.0.0-RC2"
 ThisBuild / organization := "com.easysales"
 
 //Тестирование нового синтакса Scala 3
@@ -21,10 +21,13 @@ lazy val syntax = (project in file ("applications/syntax")).
       mainClass := Some("com.easysales.dotty.fp.app.syntax.Main"),
       libraryDependencies ++= Seq(
         junit,
-        typesafe,
-        scallop
+        typesafe
+        //scallop
       ),
-      libraryDependencies := libraryDependencies.value.map(_.withDottyCompat(scalaVersion.value)), //https://github.com/lampepfl/dotty-example-project
+      //scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
+      //resolvers += Resolver.url("typesafe", url("https://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
+
+      //libraryDependencies := libraryDependencies.value.map(_.withDottyCompat(scalaVersion.value)), //https://github.com/lampepfl/dotty-example-project
       //testFrameworks := Seq(new TestFramework("zio.test.sbt.ZTestFramework"))
     //    test in assembly := {},
 //    assemblyJarName in assembly := s"es-dotty=fp-app-syntax.jar",
@@ -44,18 +47,21 @@ lazy val zio = (project in file ("applications/zionomicon")).
   settings(
     name := "com.easysales.dotty.fp.app.zionomicon",
     mainClass := Some("com.easysales.dotty.fp.app.zionomicon.Main"),
-    addCompilerPlugin(monadic),    
+    //addCompilerPlugin(monadic),
     libraryDependencies ++= Seq(
       junit,
       typesafe,
-      scallop,
+      //scallop,
       zioCore,
       zioTest,
       zioSbt,
       zioJunit,
       zioMagnolia
     ),
-    libraryDependencies := libraryDependencies.value.map(_.withDottyCompat(scalaVersion.value)),
+    //scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
+    //resolvers += Resolver.url("typesafe", url("https://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
+
+    //libraryDependencies := libraryDependencies.value.map(_.withDottyCompat(scalaVersion.value)),
     testFrameworks := Seq(new TestFramework("zio.test.sbt.ZTestFramework"))
   )
   //.enablePlugins(AssemblyPlugin)
